[project]
name = "clouds"
version = "0.1.0"
description = "A collection of PyG compatible datasets"
readme = "README.md"
authors = [
    { name = "Jackson Campolattaro", email = "jackson.campolattaro@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
