[project]
name = "clouds"
version = "0.1.0"
description = "A collection of PyG compatible datasets"
readme = "README.md"
authors = [
    { name = "Jackson Campolattaro", email = "jackson.campolattaro@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "gdown>=5.2.0",
    "h5py==3.14.0",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "pykeops>=2.3",
    "pynanoflann>=0.10.0",
    "pytest>=9.1.1",
    "torch-fpsample",
]

[tool.uv.sources]
torch-fpsample = { git = "https://github.com/leonardodalinky/pytorch_fpsample", rev = "be93a08" }

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = [
    "RUF",
    "I", # isort
    "E", # pycodestyle
    "F", # pyflakes
    "FLY", # flynt
    "B", # bugbear
    "SIM", # simplify
]
exclude = [
    "UP", # pyupgrade is currently incompatible with PyG's reflection
    "Q", # I have my own preferences for quotes
]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"

[tool.ty.rules]
possibly-unbound-attribute = "ignore"
